[tool.poetry]
name = "ste"
version = "0.0.0"
description = "<Enter a one-sentence description of this project here.>"
authors = ["Tom Mertens <your.email@whatev.er>"]
license = "MIT"

readme = 'README.rst'

repository = "https://github.com/tomerten/steibs"
homepage = "https://github.com/tomerten/steibs"

keywords = ['packaging', 'poetry']

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
numpy = "^1.21.1"
ipykernel = "^6.0.3"
matplotlib = "^3.4.2"
seaborn = "^0.11.1"
scipy = "^1.7.1"
ipython = "^7.26.0"

[tool.poetry.dev-dependencies]
pytest = "^4.4.2"
black = "^21.7b0"
isort = "^5.9.3"
pylint = "^2.9.6"

[tool.poetry.scripts]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
